vlib/v/checker/tests/multi_return_arg_missing_err.vv
fn expect_2(a int, b int) {
}

fn returning_2() (int, int) {
	return 1, 1
}

fn main() {
	expect_2(1, returning_2())
	expect_2(returning_2(), 1)
}
